<resources>
    <string name="app_name">Flights</string>
    <string name="prefs_file">com.example.firebasetutorial.PREFERENCE_FILE_KEY</string>

    <string name="roundtrip">RoundTrip</string>
    <string name="one_way">One way</string>
    <string name="history">History</string>
    <string name="depart">Depart:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="returni">Return:</string>
    <string name="passengers">Passengers:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="uno">1</string>
    <string name="search_fligth">Search Fligth</string>
    <string name="welcome">Welcome,</string>
    <string name="maximum_number_of_stops">Maximum number of stops:</string>
    <string name="nonstop">Nonstop</string>
    <string name="one_stop">One stop</string>
    <string name="_2_or_more">2 or more</string>
    <string name="type">Type:</string>
    <string name="key">348724132232-jrgrgro3tjc7eqc9p4n1e3po5f9afak1.apps.googleusercontent.com</string>
    <string name="your_flights">YOUR FLIGHTS:</string>
    <string name="back">Back</string>
    <string name="select_city">Select a City:</string>
    <string name="no_saved">Flight has not been booked</string>
    <string name="saved">Flight saved on history</string>
    <string name="book">Do you want to book this flight?</string>
    <string name="all_fields">All fields need to be covered</string>
    <string name="dates_after_today">You can\'t get a flight before today</string>
    <string name="come">You can\'t come before you go</string>
    <string name="leave">you can\'t leave after coming</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="registro_completo">Correct Registration</string>
    <string name="problema_registro">An error occurred in the user registration</string>
    <string name="sintaxis_mal">Incorrect email or password syntax</string>
    <string name="error_inicio_sesion">Login failed</string>
    <string name="acceso_correcto">Correct Access</string>
    <string name="disabled">Disabled Option</string>
</resources>